Fixes issue #3 and #4